Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>vPlanning</h1>
-          <h2>virtual planning : I need plan my time life</h2>
+          <h2>I need plan my time life</h2>
         </header>
 
         <section id="downloads" class="clearfix">
